# factai

./: .gitignore  README.md  citations.tex  policies.py  pyproject.toml  rcon.py  run.py  serv.py  server.py
factai_0.1.0/: commands.lua  control.lua  info.json  msgpack.lua  util.lua
factai_0.1.0/factai/: factai.lua
pyfactorio/: factorio.py  pyproject.toml  util.py
pyfactorio/actions/: actions.py
pyfactorio/api/: api.py  entities.py  rcon.py  serv.py  technology.py
pyfactorio/env/: controller.py  environment.py  factorio_env.py  runner.py
pyfactorio/render/: colors.py  features.py  game.py  memoize.py  metrics.py  named_array.py  np_util.py  point.py  static_data.py  stopwatch.py  surface.py  transform.py
wiki/: minigames.md  mod_events.md
