[tool.poetry]
name = "pyfactorio"
version = "0.1.0"
description = ""
authors = ["Tanner Bruce"]

[tool.poetry.dependencies]
python = "^3.9"
mcrcon = "^0.6.0"
pygame = "^2.0.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
