[tool.poetry]
name = "factai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mcrcon = "^0.6.0"
msgpack-python = "^0.5.6"
pygame = "^2.0.0"
numpy = "^1.19.4"
black = "^20.8b1"
rope = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
